# aicomiter

./: .aicomiter.example.yaml  .gitignore  .goreleaser.yaml  Cargo.toml  LICENSE  Makefile  README.md  USAGE.md  ZIG_README.md  build.zig  default.nix  flake.nix  go.mod  main.go  test-macro.zig  test.sh
.github/scripts/: update-flake-hashes.sh
.github/workflows/: release.yml  update-flake-hashes.yml
cmd/: generate.go  init.go  root.go  show_config.go
internal/ai/: anthropic.go  anthropic_test.go  client.go  client_test.go  openai.go  openai_test.go  prompt.go  prompt_test.go
internal/config/: config.go  config_test.go  simple.go  simple_test.go  source.go
internal/git/: git.go  git_test.go
src/: ai.rs  ai.zig  app.rs  cli.rs  cli.zig  config.rs  config.zig  git.rs  git.zig  lib.rs  main.rs  main.zig  message_template.rs  util.zig
tests/: cli.rs
