[package]
name = "aicomiter"
version = "0.2.1"
edition = "2024"
rust-version = "1.97"
description = "Generate conventional Git commit messages with AI"
license = "MIT"
repository = "https://github.com/DawnMagnet/aicomiter"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
duct = "1.1"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.13"
thiserror = "2.0"
ureq = { version = "3.3", default-features = false, features = ["json", "rustls"] }

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
tempfile = "3.23"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
